{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 45,
  "lineage": "19647308-8a5a-242e-8e15-d7f7b21a14a7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "policy_group_apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "app-rules-private-apim-portal",
                "priority": 200,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*"
                    ],
                    "destination_urls": [],
                    "http_headers": [],
                    "name": "AllowAllFromApimSubnet",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "10.3.1.0/24"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzaks-hub/providers/Microsoft.Network/firewallPolicies/firewall-policy",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzaks-hub/providers/Microsoft.Network/firewallPolicies/firewall-policy/ruleCollectionGroups/policy_group_apim_portal",
            "name": "policy_group_apim_portal",
            "nat_rule_collection": [],
            "network_rule_collection": [],
            "priority": 200,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-apim",
            "azurerm_virtual_network.vnet-spoke",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/networkSecurityGroups/nsg-apim",
            "location": "westeurope",
            "name": "nsg-apim",
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureKeyVault",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow-outbound-keyvault",
                "priority": 1040,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "SQL",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow-outbound-azure-sql",
                "priority": 1030,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow-outbound-storage",
                "priority": 1020,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-inbound-apim",
                "priority": 1010,
                "protocol": "Tcp",
                "source_address_prefix": "ApiManagement",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-inbound-internet-https",
                "priority": 1030,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "6390",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-inbound-infra-lb",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-inbound-internet-http",
                "priority": 1020,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-inbound-apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/networkSecurityGroups/nsg-apim/securityRules/allow-inbound-apim",
            "name": "allow-inbound-apim",
            "network_security_group_name": "nsg-apim",
            "priority": 1010,
            "protocol": "Tcp",
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "source_address_prefix": "ApiManagement",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-inbound-infra-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "6390",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/networkSecurityGroups/nsg-apim/securityRules/allow-inbound-infra-lb",
            "name": "allow-inbound-infra-lb",
            "network_security_group_name": "nsg-apim",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-inbound-internet-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/networkSecurityGroups/nsg-apim/securityRules/allow-inbound-internet-http",
            "name": "allow-inbound-internet-http",
            "network_security_group_name": "nsg-apim",
            "priority": 1020,
            "protocol": "Tcp",
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-inbound-internet-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/networkSecurityGroups/nsg-apim/securityRules/allow-inbound-internet-https",
            "name": "allow-inbound-internet-https",
            "network_security_group_name": "nsg-apim",
            "priority": 1030,
            "protocol": "Tcp",
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-outbound-azuresql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "SQL",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "1443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/networkSecurityGroups/nsg-apim/securityRules/allow-outbound-azure-sql",
            "name": "allow-outbound-azure-sql",
            "network_security_group_name": "nsg-apim",
            "priority": 1030,
            "protocol": "Tcp",
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-outbound-keyvault",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureKeyVault",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/networkSecurityGroups/nsg-apim/securityRules/allow-outbound-keyvault",
            "name": "allow-outbound-keyvault",
            "network_security_group_name": "nsg-apim",
            "priority": 1040,
            "protocol": "Tcp",
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-outbound-storage",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "Storage",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/networkSecurityGroups/nsg-apim/securityRules/allow-outbound-storage",
            "name": "allow-outbound-storage",
            "network_security_group_name": "nsg-apim",
            "priority": 1020,
            "protocol": "Tcp",
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "apim-internal-lzapim-portal",
            "fqdn": "apim-internal-lzapim-portal.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/publicIPAddresses/pip-apim",
            "idle_timeout_in_minutes": 4,
            "ip_address": "50.85.211.136",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-apim",
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route_to_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/routeTables/route-table-to-firewall/routes/route-to-firewall",
            "name": "route-to-firewall",
            "next_hop_in_ip_address": "172.16.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "route_table_name": "route-table-to-firewall",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.route_table_to_firewall",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route_table_to_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/routeTables/route-table-to-firewall",
            "location": "westeurope",
            "name": "route-table-to-firewall",
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route-to-firewall",
                "next_hop_in_ip_address": "172.16.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal/subnets/snet-apim"
            ],
            "tags": {
              "architecture": "Hub\u0026Spoke",
              "environment": "development",
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-ai",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.3.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal/subnets/snet-ai",
            "name": "snet-ai",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "virtual_network_name": "vnet-spoke-apim-portal"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet-spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.3.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "Microsoft.Web/serverFarms",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal/subnets/snet-apim",
            "name": "snet-apim",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "virtual_network_name": "vnet-spoke-apim-portal"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet-spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.3.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "virtual_network_name": "vnet-spoke-apim-portal"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet-spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.3.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal/subnets/snet-jumpbox",
            "name": "snet-jumpbox",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "virtual_network_name": "vnet-spoke-apim-portal"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet-spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal/subnets/snet-apim",
            "network_security_group_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/networkSecurityGroups/nsg-apim",
            "subnet_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal/subnets/snet-apim"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-apim",
            "azurerm_virtual_network.vnet-spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "association_rt_subnet_apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal/subnets/snet-apim",
            "route_table_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/routeTables/route-table-to-firewall",
            "subnet_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal/subnets/snet-apim"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.route_table_to_firewall",
            "azurerm_subnet.snet-apim",
            "azurerm_virtual_network.vnet-spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.3.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b430fce9-cc4c-4ab2-834a-5d0171700a0d",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal",
            "location": "westeurope",
            "name": "vnet-spoke-apim-portal",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "subnet": [
              {
                "address_prefixes": [
                  "10.3.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal/subnets/snet-ai",
                "name": "snet-ai",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.3.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "Microsoft.Web/serverFarms",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/action"
                        ],
                        "name": "Microsoft.Web/serverFarms"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal/subnets/snet-apim",
                "name": "snet-apim",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "route_table_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/routeTables/route-table-to-firewall",
                "security_group": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/networkSecurityGroups/nsg-apim"
              },
              {
                "address_prefixes": [
                  "10.3.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal/subnets/snet-jumpbox",
                "name": "snet-jumpbox",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.3.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_network_peering_hub_and_spoke_aks[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet_peering_hub_to_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzaks-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/virtualNetworkPeerings/vnet_peering_hub_to_vnet-spoke-apim-portal",
            "name": "vnet_peering_hub_to_vnet-spoke-apim-portal",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal",
            "resource_group_name": "rg-lzaks-hub",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet-spoke",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_network_peering_hub_and_spoke_aks[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet_peering_spoke_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzapim-spoke-apim-weu-portal/providers/Microsoft.Network/virtualNetworks/vnet-spoke-apim-portal/virtualNetworkPeerings/vnet_peering_vnet-spoke-apim-portal_to_hub",
            "name": "vnet_peering_vnet-spoke-apim-portal_to_hub",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-lzaks-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "rg-lzapim-spoke-apim-weu-portal",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spoke-apim-portal"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet-spoke",
            "data.terraform_remote_state.hub"
          ]
        }
      ]
    }
  ]
}